Fix image alignment

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -21,7 +21,7 @@
 }
 
 .news-image-vin img {
-  width: auto;
+  width: 580px;
   height: 110%;
 }
 
